--- a/calculator/templates/caculator.html
+++ b/calculator/templates/caculator.html
@@ -7,7 +7,7 @@
     <title>Loan calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-    <link rel="stylesheet" href="{% static 'styles/calculator.css' %}">
+    <link rel="stylesheet" href="{% static 'style/calculator.css' %}">
 </head>
 <body>
 <h1 class="text-center align-content-center heading-text">Кредитный калькулятор</h1>
@@ -202,6 +202,7 @@
                     <tr>
                         <th>No</th>
                         <th>Дата</th>
+                        <th>Сумма</th>
                         <th>Погошение основного долга</th>
                         <th>Выалата процентов</th>
                         <th>Остаток</th>
