не работате 31 число

--- a/calculator/templates/caculator.html
+++ b/calculator/templates/caculator.html
@@ -200,13 +200,13 @@
                 <table id="paymentCalculationTable">
                     <thead>
                     <tr>
-                        <th class="table">No</th>
-                        <th class="table">Дата</th>
-                        <th class="table">Сумма</th>
-                        <th class="table">Погошение основного долга</th>
-                        <th class="table">Выалата процентов</th>
-                        <th class="table">Остаток</th>
-                        <th class="table">Описание</th>
+                        <th>No</th>
+                        <th>Дата</th>
+                        <th>Сумма</th>
+                        <th>Погошение основного долга</th>
+                        <th>Выалата процентов</th>
+                        <th>Остаток</th>
+                        <th >Описание</th>
                     </tr>
                     <tbody>
 
